# simple-webrtc-cpp-linux

./: CMakeLists.txt  LICENSE  README.md  main.cpp
picojson/: picojson.h
src/: rtc_connection.h  rtc_ice.h  rtc_wrapper.h
